--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -82,7 +82,6 @@ dependencies {
     //Dagger - Hilt
     implementation libs.hilt.android
     kapt libs.hilt.android.compiler
-    implementation libs.androidx.hilt.lifecycle.viewmodel
     kapt libs.androidx.hilt.compiler
     implementation libs.androidx.hilt.navigation.compose
 
