--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     implementation libs.converter.gson
     implementation libs.okhttp
     implementation libs.logging.interceptor
+
+    implementation libs.androidx.navigation.compose.v253
 }
